# NexusTrader

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js.example  env.example  latexmkrc  pyproject.toml  requirements.txt
.keys/: .gitignore  .secrets.toml.example
benchmark/: aiosonic_aiohttp.py  json_format_benchmark.py  test_nautilius_clock.py
docs/: pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  release_notes.rst
example/: binance_get_listen_key.py  binance_place_order.py
nexustrader/: __init__.py  aggregation.py  config.py  constants.py  engine.py  error.py  indicator.py  schema.py  strategy.py
nexustrader/backends/: db_postgresql.py  db_sqlite.py
nexustrader/base/: api_client.py  connector.py  ems.py  exchange.py  oms.py  retry.py  sms.py  ws_client.py
nexustrader/core/: cache.py  entity.py  log.py  nautilius_core.py  nexus_core.py  registry.py
nexustrader/exchange/: __init__.py
scripts/: pnl_analysis.py
strategy/binance/: buy_and_sell.py  buy_and_sell_pm.py  cancel_all_orders.py  custum_signal.py  mock_trading.py  modify_order.py  multi_conn.py  place_batch_orders.py  request_klines.py  set_params.py  signal_server.py  subscribe_bookl2.py  subscribe_bool2.py  subscribe_funding_rate.py  tp_sl_order.py  (+2 more)
test/: test_ack_and_reconcile.py  test_credential_resolution.py  test_order_idempotency.py  test_post_ack_terminal_reconcile.py  test_reconnect_resync_failure.py  test_v033_changes.py  test_ws_ack.py
tradebot/: base.py
(+182 files in other folders)
