[project]
name = "nexustrader"
version = "0.3.28"
description = "fastest python trading bot"
authors = [
    {name = "Scott",email = "pythonz2002@gmail.com"}
]
license = {text = "MIT LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=1.26.4,<2.2.1)",
    "redis (>=5.2.1,<6.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "throttled-py>=2.2.3",
    "ccxt>=4.5.22",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "textual>=0.85.0",
    "click>=8.1.0",
    "pycryptodome>=3.23.0",
    "eth-account>=0.13.7",
    "typing-extensions>=4.12.2",
    "fastapi>=0.117.1",
    "uvicorn>=0.36.0",
    "curl-cffi>=0.13.0",
    "picows>=1.10.1",
    "dynaconf[redis]>=3.2.12",
    "pandas>=3.0.1",
    "loguru>=0.7.3",
    "aiohttp>=3.12.0",
]

[project.optional-dependencies]
signal = ["zmq (>=0.0.0,<0.0.1)"]
tradfi = ["MetaTrader5>=5.0.5640; sys_platform == 'win32'"]

[project.scripts]
nexustrader-cli = "nexustrader.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.11.10",
    "pyinstrument>=5.0.1",
]
